--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,45 +1,64 @@
 .task1 {
+  display:grid
 }
 
 .task2 {
+  display: grid;
+  grid-template-rows: 1fr;
+  max-width: fit-content;
 }
 
 .task3 {
   display: grid;
+  
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 25px 10px; 
 }
 
 .task4 {
   display: grid;
+
 }
+
 .task4 .item2 {
+ order: 4; 
 }
 .task4 .item4 {
+  order: 3; 
 }
 .task4 .item3 {
+  order: 5;
 }
 
 .task5 {
   display: grid;
+  justify-content: flex-start;
 }
 
 .task6 {
   display: grid;
+  justify-content: flex-end;
 }
 
 .task7 {
   display: grid;
+  justify-content: center;
 }
 
 .task8 {
   display: grid;
+  justify-content: space-between;
 }
 
 .task9 {
   display: grid;
+  justify-content: space-around;
+
 }
 
 .task10 {
   display: grid;
+  justify-content: space-evenly;
 }
 
 .task11 {
@@ -48,62 +67,82 @@
 
 .task12 {
   display: grid;
+  align-content: flex-start; 
+  place-content: start;
 }
 
 .task13 {
   display: grid;
+  align-content: flex-end; 
+  place-content: end;
 }
 
 .task14 {
   display: grid;
+  align-content: center;
+
 }
 
 .task15 {
   display: grid;
+  place-content:inherit;
 }
 
 .task16 {
   display: grid;
+  align-content: space-between; 
 }
 
 .task17 {
   display: grid;
+  align-content: space-around; 
 }
 
 .task18 {
   display: grid;
+  align-content: space-evenly; 
 }
 
 .task19 {
   display: grid;
-}
+align-content: center;}
 
 .task20 {
   display: grid;
+  place-items: start;
 }
 
 .task21 {
   display: grid;
+  place-items: end;
 }
 
 .task22 {
   display: grid;
+  place-items: center;
 }
 
 .task23 {
   display: grid;
+
 }
 
 .task24 {
   display: grid;
+ justify-content: space-between;
+  
+  align-items: start;
 }
 
 .task25 {
   display: grid;
+  justify-content: space-between;
+    align-items: end;
 }
 
 .task26 {
   display: grid;
+  align-items: center;
 }
 
 .task27 {
@@ -112,88 +151,135 @@
 
 .task28 {
   display: grid;
+  align-items: baseline;
+
+   max-block-size:fit-content;
 }
 
 .task29 {
   display: grid;
+  align-content: stretch;
+  place-items: center;
+  max-height: 100%;
+vertical-align: 100%;
 }
 
 .task30 {
   display: grid;
 }
 .task30 .item1 {
+  place-items: start;
+  max-width: max-content ;
 }
 
 .task31 {
   display: grid;
 }
 .task31 .item2 {
+  justify-self: end;
+  place-items: end;
+  max-width: max-content;
 }
 
 .task32 {
   display: grid;
 }
 .task32 .item3 {
+  justify-self: center;
+  place-items: end;
+  max-width: max-content;
 }
 
 .task33 {
   display: grid;
 }
 .task33 .item4 {
+
+  justify-self: stretch;
 }
 
 .task34 {
   display: grid;
 }
 .task34 .item1 {
+  align-items: baseline;
+height:   max-content;
+ 
+
 }
 
 .task35 {
   display: grid;
 }
 .task35 .item2 {
+  align-self: end;
+height:   max-content;
+
 }
 
 .task36 {
   display: grid;
 }
 .task36 .item3 {
+  align-self: center;
+  height:   max-content;
 }
 
 .task37 {
   display: grid;
 }
 .task37 .item4 {
+  align-self: stretch;
 }
 
 .task38 {
   display: grid;
 }
 .task38 .item5 {
+  align-self: center;
+  width:   max-content;
+  justify-content: start;
 }
 
 .task39 {
   display: grid;
+ 
+  grid-template-columns: repeat(2, 1fr); 
+  grid-template-rows: repeat(3, 1fr 2fr 3fr);
 }
+
+
+
 
 .task40 {
   display: grid;
+  grid-template-columns:  30% 70%; 
+ max-width: max-content;
+ grid-template-rows: 1fr 1fr 2fr;
 }
 
 .task41 {
   display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(3, 110px 30%);
+ 
 }
 
 .task42 {
   display: grid;
+  grid-template-columns: 1fr 1fr;
+ 
 }
 .task42 .item1 {
+  grid-row: 1 / 3;
 }
 .task42 .item2 {
+  
 }
 .task42 .item3 {
 }
 .task42 .item4 {
+  grid-row: 3 / 5;
 }
 .task42 .item5 {
 }
@@ -202,46 +288,58 @@
 
 .task43 {
   display: grid;
+
 }
 .task43 .item3 {
+  grid-column: 1 / 3;
 }
 
 .task44 {
   display: grid;
 }
 .task44 .item3 {
+  grid-row: 1 / 3;
 }
 
 .task45 {
   display: grid;
 }
 .task45 .item3 {
+  grid-row: 1 / 3;
+  grid-column: 1 / 3;
 }
 
 .task46 {
   display: grid;
+  grid-template-columns: min-content max-content;
 }
 
 .task47 {
   display: grid;
+  grid-template-rows: min-content;
 }
 
 .task48 {
+  display: grid;
+  grid-template-rows: auto;
+}
+.task49 {
   display: grid;
 }
 
 .task50 {
   display: grid;
+  grid-auto-flow:dense;
 }
 
-.task49 {
-  display: grid;
-}
 
 .task51 {
   display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
 }
 
 .task52 {
   display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+ max-width: 100%;
 }
